添加 python-dotenv 依赖，更新 HTML 页面以集成 LA SDK，并新增 Docker 重启脚本

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="本页面是曲阜师范大学期末考试安排导出为日历文件便于导入而设计，由W1ndys编写" />
   <link rel="stylesheet" href="/static/styles.css" />
   <link rel="icon" href="/static/favicon.svg" />
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({ id: "3KmE47Pq5aior4vY", ck: "3KmE47Pq5aior4vY", autoTrack: true, hashMode: true, screenRecord: true })</script>
   <script>
     // 添加浏览器环境检测函数
     function checkBrowser() {
