修复 HTML 页脚中的版权信息格式

--- a/static/index.html
+++ b/static/index.html
@@ -90,7 +90,7 @@
     <p id="error-message" style="color: red"></p>
   </form>
   <footer>
-    <p>© 2024 Powered by <a href="https://www.w1ndys.top">W1ndys</a>.</p>
+    <p>© 2024 Powered by <a href="https://www.w1ndys.top">W1ndys</a></p>
   </footer>
 </body>
 
